# crc_cpp

./: CMakeLists.txt  CMakePresets.json  conanfile.py
.github/workflows/: build_cmake.yml
cmake/: CompilerWarnings.cmake  Conan.cmake
include/: crc_cpp.h
test/: CMakeLists.txt  test.cpp
